Prevent the scrollbar from repositionning the page

--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -1,3 +1,7 @@
 * {
     font-family: var(--font-family);
 }
+
+html {
+    overflow-y: scroll;
+}
